# AgentWorthy

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Makefile  README.md  VERCEL.md  agentworthy-build-prompt.md  docker-compose.yml  gate1_output.txt  netlify.toml  next-env.d.ts  next.config.js  package-lock.json  package.json  public  render.yaml  src  tailwind.config.ts  tsconfig.json
apps/api/: Dockerfile  pyproject.toml
apps/api/agentworthy/: auth.py  config.py  database.py  main.py  models.py  plan_limits.py  redis_client.py  schemas.py
apps/api/agentworthy/routes/: auth.py  billing.py  public.py  scans.py  sites.py
apps/api/agentworthy/services/: diff.py  verification.py
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 001_initial_schema.py  002_stage3_to_7_schema.py
apps/api/tests/: test_cross_user_access.py  test_health.py  test_public_scan.py  test_rate_limit.py  test_verification.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/agentworthy_worker/: crawler.py  jobs.py  main.py  scan_context.py
apps/worker/agentworthy_worker/checks/: actionability.py  base.py  context.py  discoverability.py  llms_txt_present.py  machine_readability.py  performance.py  robots_agent_access.py  runner.py  ssr_content_ratio.py  stubs.py  trust_freshness.py  utils.py
apps/worker/agentworthy_worker/fixes/: generator.py
apps/worker/agentworthy_worker/llm/: client.py  config.py
apps/worker/agentworthy_worker/security/: ssrf.py
apps/worker/agentworthy_worker/simulation/: a11y_tree.py  actions.py  journeys.py  loop.py  safety.py  storage.py
apps/worker/tests/: conftest.py  helpers.py  test_all_checks.py  test_llms_txt_present.py  test_robots_agent_access.py  test_scoring.py  test_simulation_safety.py  test_ssr_content_ratio.py  test_ssrf.py
apps/worker/tests/fixtures/: llms_txt_valid.txt  (+4 more)
(+55 files in other folders)
