[project]
name = "agentworthy-worker"
version = "0.1.0"
description = "Agentworthy scan worker"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "rq>=2.0.0",
    "httpx>=0.28.0",
    "playwright>=1.49.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentworthy_worker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
